--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -1,20 +1,21 @@
 <%= content_for :title, t('subscriptions.title.index') %>
 
-<% if params[:user] %>
-    <% title = 'User Subscriptions' %>
-<% elsif params[:goal] %>
-    <% title = 'Goal Subscriptions' %>
+<% if params[:goal] %>
+    <% title = link_to('Goal', goal_path(params[:goal])) + ' Subscriptions' %>
+<% elsif params[:user] %>
+    <% title = link_to('User', user_path(params[:user])) + ' Subscriptions' %>
 <% else %>
     <% title = 'Subscriptions' %>
 <% end %>
 
 <%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: @subscriptions} do %>
     <% @subscriptions.each do |subscription| %>
-        <%= render partial: 'controls', locals: {subscription: subscription} %>
-        Subscription completed: <b><%= subscription.completed? %></b><br>
-        Subscription Goal: <%= link_to subscription.goal.title, subscription.goal %>
-        <%= link_to subscription.goal.score, scores_path(goal: subscription.goal), class: 'badge' %><br>
-        Subscription User: <%= link_to subscription.user.name, subscription.user %>
-        <%= link_to subscription.user.score, scores_path(user: subscription.user), class: 'badge' %><br>
+        <%= render layout: 'layouts/row' do %>
+            <li class="list-group-item">
+              <%= render partial: 'subscriptions/controls', locals: {subscription: subscription} %>
+              <%= render subscription, locals: {subscription: subscription} %>
+            </li>
+        <% end %>
+        <hr>
     <% end %>
 <% end %>
