--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,10 @@
 <% title = 'Show User' %>
 
 <%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: nil} do %>
-    <%= render partial: 'controls', locals: {user: @user} %>
-    <%= render @user, locals: {user: @user} %>
-    <%= render partial: 'items', locals: {user: @user} %>
+    <%= render layout: 'layouts/row' do %>
+        <li class="list-group-item">
+          <%= render partial: 'controls', locals: {user: @user} %>
+          <%= render @user, locals: {user: @user} %>
+        </li>
+    <% end %>
 <% end %>
