--- a/app/views/comments/_controls.html.erb
+++ b/app/views/comments/_controls.html.erb
@@ -1,9 +1,23 @@
-<h5><%= link_to 'Show', comment unless current_page?(comment) %></h5>
-<% unless current_page?(edit_comment_path(comment)) %>
-    <% if can? :update, comment %>
-        <h5><%= link_to 'Edit', edit_comment_path(comment) %></h5>
-    <% end %>
-<% end %>
-<% if can? :destroy, comment %>
-    <h5><%= link_to 'Delete', comment, method: :delete, data: {confirm: 'Are you sure?'} %></h5>
-<% end %>
+<h5>
+  <% if current_page?(comment) %>
+      <i class="glyphicon glyphicon-search"></i> Show
+  <% else %>
+      <%= link_to comment do %>
+          <i class="glyphicon glyphicon-search"></i> Show
+      <% end %>
+  <% end %>
+  <% if current_page?(edit_comment_path comment) %>
+      <% if can? :update, comment %>
+          | <i class="glyphicon glyphicon-pencil"></i> Edit
+      <% end %>
+  <% elsif can? :update, comment %>
+      | <%= link_to edit_comment_path(comment) do %>
+          <i class="glyphicon glyphicon-pencil"></i> Edit
+      <% end %>
+  <% end %>
+  <% if can? :destroy, comment %>
+      | <%= link_to comment, method: :delete, data: {confirm: 'Are you sure?'} do %>
+          <i class="glyphicon glyphicon-trash"></i> Delete
+      <% end %>
+  <% end %>
+</h5>
