--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,16 +1,21 @@
 <%= content_for :title, t('comments.title.index') %>
 
-<% if params[:user] %>
-    <% title = 'User Comments' %>
-<% elsif params[:goal] %>
-    <% title = 'Goal Comments' %>
+<% if params[:goal] %>
+    <% title = link_to('Goal', goal_path(params[:goal])) + ' Comments' %>
+<% elsif params[:user] %>
+    <% title = link_to('User', user_path(params[:user])) + ' Comments' %>
 <% else %>
     <% title = 'Comments' %>
 <% end %>
 
 <%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: @comments} do %>
     <% @comments.each do |comment| %>
-        <%= render partial: 'controls', locals: {comment: comment} %>
-        <%= render comment, locals: {comment: comment} %>
+        <%= render layout: 'layouts/row' do %>
+            <li class="list-group-item">
+              <%= render partial: 'controls', locals: {comment: comment} %>
+              <%= render comment, locals: {comment: comment} %>
+            </li>
+        <% end %>
+        <hr>
     <% end %>
 <% end %>
