--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -3,6 +3,10 @@
 <% title = 'Show Comment' %>
 
 <%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: nil} do %>
-    <%= render partial: 'controls', locals: {comment: @comment} %>
-    <%= render @comment, locals: {comment: @comment} %>
+    <%= render layout: 'layouts/row' do %>
+        <li class="list-group-item">
+          <%= render partial: 'controls', locals: {comment: @comment} %>
+          <%= render @comment, locals: {comment: @comment} %>
+        </li>
+    <% end %>
 <% end %>
