--- a/app/views/layouts/_jumbotron.html.erb
+++ b/app/views/layouts/_jumbotron.html.erb
@@ -1,20 +1,20 @@
 <div class="jumbotron">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-offset-2 col-xs-8">
         <h1><%= title %></h1>
       </div>
+      <div class="col-xs-2"></div>
     </div>
-    <div class="row">
-      <div class="col-xs-12">
-        <%= yield %>
-      </div>
-    </div>
+    <ul class="list-group">
+      <%= yield %>
+    </ul>
     <% if paginatable.present? %>
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-offset-2 col-xs-8">
             <%= paginate paginatable %>
           </div>
+          <div class="col-xs-2"></div>
         </div>
     <% end %>
   </div>
