--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,66 +11,9 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-
-        <% if user_signed_in? %>
-            <% if current_page?(new_goal_path) %>
-                <li class="active"><%= link_to 'New Goal', new_goal_path %></li>
-            <% else %>
-                <li><%= link_to 'New Goal', new_goal_path %></li>
-            <% end %>
-            <% if current_user.admin? %>
-                <% if current_page?(new_admin_user_path) %>
-                    <li class="active"><%= link_to 'New User', new_admin_user_path %></li>
-                <% else %>
-                    <li><%= link_to 'New User', new_admin_user_path %></li>
-                <% end %>
-            <% end %>
-        <% end %>
-
-        <% if @goals and not @user %>
-            <li class="active"><%= link_to 'Goals', goals_path %></li>
-        <% else %>
-            <li><%= link_to 'Goals', goals_path %></li>
-        <% end %>
-
-        <% if @users %>
-            <%= render 'layouts/users' %>
-        <% else %>
-            <li><%= link_to 'Users', users_path %></li>
-        <% end %>
-
-        <% if @goals %>
-            <%= render 'layouts/goals' %>
-        <% elsif @goal and not (@comments or @scores or @subscriptions) %>
-            <%= render 'layouts/goal' %>
-        <% end %>
-
-        <% if current_page?(new_user_session_path) %>
-            <li class="active"><%= link_to 'Sign in', new_user_session_path %></li>
-        <% elsif current_page?(new_user_registration_path) %>
-            <li class="active"><%= link_to 'Sign up', new_user_registration_path %></li>
-        <% elsif @user and not (@comments or @goals or @scores or @subscriptions or @tokens) ||
-                current_page?(edit_user_registration_path) %>
-            <%= render 'layouts/user' %>
-        <% end %>
-
-        <%= render 'layouts/comment' if @comment %>
-        <%= render 'layouts/comments' if @comments %>
-        <%= render 'layouts/score' if @score %>
-        <%= render 'layouts/scores' if @scores %>
-        <%= render 'layouts/subscription' if @subscription unless @goal %>
-        <%= render 'layouts/subscriptions' if @subscriptions %>
-        <%= render 'layouts/token' if @token %>
-        <%= render 'layouts/tokens' if @tokens %>
-
-        <% if current_page?(page_path('about')) %>
-            <li class="active"><%= link_to 'About', page_path('about') %></li>
-        <% else %>
-            <li><%= link_to 'About', page_path('about') %></li>
-        <% end %>
-
+        <%= render 'layouts/items' %>
       </ul>
-      <%= form_tag search_goals_path, method: :get, class: 'navbar-form navbar-left' do %>
+      <%= form_tag goals_path, method: :get, class: 'navbar-form navbar-left' do %>
           <div class="form-group input-group">
             <div class="input-group-addon">Goals:</div>
             <%= search_field_tag :q, nil, class: 'form-control' %>
@@ -89,8 +32,7 @@
             <% end %>
             <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <%= render 'devise/menu/registration_items' %>
-            <%= render 'devise/menu/login_items' %>
+            <%= render 'devise/menu/items' %>
           </ul>
         </li>
       </ul>
