--- a/app/views/scores/index.html.erb
+++ b/app/views/scores/index.html.erb
@@ -4,13 +4,20 @@
     <% title = link_to('Goal', goal_path(params[:goal])) + ' Scores' %>
 <% elsif params[:user] %>
     <% title = link_to('User', user_path(params[:user])) + ' Scores' %>
+<% elsif params[:subscription] %>
+    <% title = 'Subscription Scores' %>
 <% else %>
     <% title = 'Scores' %>
 <% end %>
 
 <%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: @scores} do %>
     <% @scores.each do |score| %>
-        <%= render partial: 'controls', locals: {score: score} %>
-        <%= render score, locals: {score: score} %>
+        <%= render layout: 'layouts/row' do %>
+            <li class="list-group-item">
+              <%= render partial: 'controls', locals: {score: score} %>
+              <%= render score, locals: {score: score} %>
+            </li>
+        <% end %>
+        <hr>
     <% end %>
 <% end %>
