--- a/app/views/scores/show.html.erb
+++ b/app/views/scores/show.html.erb
@@ -3,6 +3,10 @@
 <% title = 'Show Score' %>
 
 <%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: nil} do %>
-    <%= render partial: 'controls', locals: {score: @score} %>
-    <%= render @score, locals: {score: @score} %>
+    <%= render layout: 'layouts/row' do %>
+        <li class="list-group-item">
+          <%= render partial: 'controls', locals: {score: @score} %>
+          <%= render @score, locals: {score: @score} %>
+        </li>
+    <% end %>
 <% end %>
