--- a/app/views/tokens/index.html.erb
+++ b/app/views/tokens/index.html.erb
@@ -1,11 +1,16 @@
 <%= content_for :title, t('tokens.title.index') %>
 
-<% title = 'User Tokens' %>
+<% title = link_to('User', user_path(params[:user_id])) + ' Tokens' %>
 
 <%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: nil} do %>
     <% @tokens.each do |token| %>
-        <%= render partial: 'controls', locals: {token: token} %>
-        <%= render token, locals: {token: token} %>
+        <%= render layout: 'layouts/row' do %>
+            <li class="list-group-item">
+              <%= render partial: 'controls', locals: {token: token} %>
+              <%= render token, locals: {token: token} %>
+            </li>
+        <% end %>
+        <hr>
     <% end %>
 <% end %>
 
