--- a/app/views/tokens/show.html.erb
+++ b/app/views/tokens/show.html.erb
@@ -3,6 +3,10 @@
 <% title = 'Show Token' %>
 
 <%= render layout: 'layouts/jumbotron', locals: {title: title, paginatable: nil} do %>
-    <%= render partial: 'controls', locals: {token: @token} %>
-    <%= render @token, locals: {token: @token} %>
+    <%= render layout: 'layouts/row' do %>
+        <li class="list-group-item">
+          <%= render partial: 'controls', locals: {token: @token} %>
+          <%= render @token, locals: {token: @token} %>
+        </li>
+    <% end %>
 <% end %>
