--- a/app/views/users/scores.html.erb
+++ b/app/views/users/scores.html.erb
@@ -1,2 +1,2 @@
 <%= content_for :page_title, I18n.t('users.title.scores') %>
-<%= render partial: 'scores/score', collection: @scores %>
+<%= render partial: 'scores/score', collection: @scores.accessible_by(current_ability) %>
