--- a/app/views/goals/_goal.html.erb
+++ b/app/views/goals/_goal.html.erb
@@ -19,11 +19,11 @@
               <span class="badge"><%= goal.user.score %></span>
           <% end %>
           <br>
-          <% if goal.comments.accessible_by(current_ability).present? %>
+          <% if goal.comments? %>
               <%= link_to 'Comments', comments_goal_path(goal) %>
               <br>
           <% end %>
-          <% if goal.subscribers.accessible_by(current_ability).present? %>
+          <% if goal.subscribers? %>
               <%= link_to 'Subscribers', subscribers_goal_path(goal) %>
               <br>
           <% end %>
