--- a/app/views/goals/search.html.erb
+++ b/app/views/goals/search.html.erb
@@ -1,2 +1,2 @@
 <%= content_for :page_title, I18n.t('goals.title.search') %>
-<%= render @goals.accessible_by(current_ability) %>
+<%= render @goals %>
