--- a/app/views/users/comments.html.erb
+++ b/app/views/users/comments.html.erb
@@ -1,2 +1,2 @@
 <%= content_for :page_title, I18n.t('users.title.comments') %>
-<%= render partial: 'comments/comment', collection: @comments.accessible_by(current_ability) %>
+<%= render partial: 'comments/comment', collection: @comments %>
