--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,2 @@
 <%= content_for :page_title, I18n.t('users.title.index') %>
-<%= render @users.accessible_by(current_ability) %>
+<%= render @users %>
